trunk/Archive2/b0/ca02e9dfdae64f/output
main.cpp:5:30: error: invalid operands to binary expression ('auto' and 'int')
        static_assert(X<int> == 42, "");
                      ~~~~~~ ^  ~~
1 error generated.
