trunk/Archive2/b0/ca02e9dfdae64f/main.cpp
template<class> constexpr auto X = 42;

int main()
{
        static_assert(X<int> == 42, "");
}